--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   meta: ^1.1.8
   reflectable: ^2.2.0
   rxdart: ^0.23.0
+  http: ^0.13.4
 
 dev_dependencies:
   pedantic: '^1.7.0'
